--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,39 @@
+#site-header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  color: #333;
+}
+
 h1 {
   color: blueviolet;
+}
+
+nav {
+  background-color: #333;
+  padding: 10px;
+  flex-flow: column;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+nav ul li {
+  margin-right: 20px;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
 }
 
 /* .pho {
